# ozonhack-sorter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cad/: README.md
control/: balancer.py  routing_logic.py  sorter_controller.py  wms_client.py  wms_mock.py  wms_server.py
docs/: STATUS.md  algorithms.md  alternatives.md  calculations.md  checklist.md  concept.md  deployment.md  presentation.md  report.html  report.md  s3_upload.md  slides.html  specifications.md  team.md  video_script.md
scripts/: calculations.py  generate_demo_video.py  generate_diagrams.py  generate_kty_diagram.py  generate_layout.py  generate_pdfs.py  generate_report_html.py  generate_stl.py  package_s3.sh  run_all.sh  verify_submission.py
simulation/: config.py  items.py  model.py  plots.py  run.py  scenarios.py
simulation/results/: scenario_details.json
tests/: test_balancer.py  test_control.py  test_controller.py  test_simulation.py
