[project]
name = "ozonhack-sorter"
version = "1.0.0"
description = "Модульный кросс-белт сортировщик — OzonHack Трек 2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "simpy>=4.1.1",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
